[tool.poetry]
name = "imaginairy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click="*"
click-help-colors="*"
click-shell="*"
protobuf="!= 3.20.2, != 3.19.5"
facexlib="*"
fairscale=">=0.4.4  # for vendored blip
ftfy="*"  # for vendored clip
torch=">=1.2.0
numpy="*"
tqdm="*"
diffusers="*"
imageio=">=2.9.0
Pillow=">=8.0.0
psutil="*"
pytorch-lightning=">=1.4.2"
omegaconf=">=2.1.1"
open-clip-torch="*"
opencv-python="*"
requests="*"
einops=">=0.3.0"
safetensors="*"
timm=">=0.4.12"  # for vendored blip
torchdiffeq="*"
transformers=">=4.19.2"
torchmetrics=">=0.6.0"
torchvision=">=0.13.1"
kornia=">=0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
